test/files/neg/unchecked2.check
unchecked2.scala:4: error: fruitless type test: a value of type Some[List[Int]] cannot also be a Option[List[String]] (but still might match its erasure)
  /*   warn */ Some(List(1)).isInstanceOf[Option[List[String]]]
                                         ^
unchecked2.scala:5: error: non-variable type argument Option[_] in type Option[Option[_]] is unchecked since it is eliminated by erasure
  /*   warn */ Some(123).isInstanceOf[Option[Option[_]]]
                                     ^
unchecked2.scala:6: error: fruitless type test: a value of type Some[Int] cannot also be a Option[String] (but still might match its erasure)
  /*   warn */ Some(123).isInstanceOf[Option[String]]
                                     ^
unchecked2.scala:7: error: fruitless type test: a value of type Some[Int] cannot also be a Option[List[String]] (but still might match its erasure)
  /*   warn */ Some(123).isInstanceOf[Option[List[String]]]
                                     ^
unchecked2.scala:8: error: fruitless type test: a value of type Some[Int] cannot also be a Option[List[Int => String]] (but still might match its erasure)
  /*   warn */ Some(123).isInstanceOf[Option[List[Int => String]]]
                                     ^
unchecked2.scala:9: error: fruitless type test: a value of type Some[Int] cannot also be a Option[(String, Double)] (but still might match its erasure)
  /*   warn */ Some(123).isInstanceOf[Option[(String, Double)]]
                                     ^
unchecked2.scala:10: error: fruitless type test: a value of type Some[Int] cannot also be a Option[String => Double] (but still might match its erasure)
  /*   warn */ Some(123).isInstanceOf[Option[String => Double]]
                                     ^
unchecked2.scala:14: error: non-variable type argument List[String] in type Option[List[String]] is unchecked since it is eliminated by erasure
  /*   warn */ (Some(List(1)): Any).isInstanceOf[Option[List[String]]]
                                                ^
unchecked2.scala:15: error: non-variable type argument Int in type Option[Int] is unchecked since it is eliminated by erasure
  /*   warn */ (Some(123): Any).isInstanceOf[Option[Int]]
                                            ^
unchecked2.scala:16: error: non-variable type argument String in type Option[String] is unchecked since it is eliminated by erasure
  /*   warn */ (Some(123): Any).isInstanceOf[Option[String]]
                                            ^
unchecked2.scala:17: error: non-variable type argument List[String] in type Option[List[String]] is unchecked since it is eliminated by erasure
  /*   warn */ (Some(123): Any).isInstanceOf[Option[List[String]]]
                                            ^
unchecked2.scala:18: error: non-variable type argument List[Int => String] in type Option[List[Int => String]] is unchecked since it is eliminated by erasure
  /*   warn */ (Some(123): Any).isInstanceOf[Option[List[Int => String]]]
                                            ^
unchecked2.scala:19: error: non-variable type argument (String, Double) in type Option[(String, Double)] is unchecked since it is eliminated by erasure
  /*   warn */ (Some(123): Any).isInstanceOf[Option[(String, Double)]]
                                            ^
unchecked2.scala:20: error: non-variable type argument String => Double in type Option[String => Double] is unchecked since it is eliminated by erasure
  /*   warn */ (Some(123): Any).isInstanceOf[Option[String => Double]]
                                            ^
14 errors found
